2015-06-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh:
	  Updated based on the mplabx-3.05.

2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/cmp_gp_mp.sh,
	  tools/device-help.pl, tools/device-manager.pl:
	  Updated based on the mplabx-3.00.

2015-03-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh:
	  Updated based on the mplabx-2.35.

2015-02-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Updated based on the mplabx-2.30.

	* tools/build-register-db.pl, tools/device-manager.pl:
	  Updated the copyrights.

2014-11-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: A minor optimization.

2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  More information from the Linear Memory on the RAM map.

2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  bugfix

2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh: bugfix

2014-11-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl:
	  Updated based on the mplabx-2.25.

2014-11-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh:
	  Ignore the content of "; Build date : ..." line in the .inc files.

2014-10-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl: bugfix

2014-09-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl
	  tools/device-help.pl, tools/device-manager.pl:
	  Updated unto the Perl 5.16 version.

2014-08-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>